Removed MaxPermSize settings now that requiring Java 8